--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@main
       - uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl private --follow-symlinks --delete --exclude '.git/*'
+          args: --acl private --follow-symlinks --delete --exclude '.git/* .github/* .gitignore airflow.sh Makefile Dockerfile docker-compose.yml'
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
